distribution XML-Compile-0.10.tar.gz

--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,14 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         XML-Compile
-version:      0.04
+version:      0.10
 version_from: version
 installdirs:  site
 requires:
-    Regexp::Common:                2
+    Math::BigInt:                  1.77
     Test::Deep:                    0.095
     Test::More:                    0.54
-    XML::LibXML:                   1.58
+    XML::LibXML:                   1.61
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.17
